--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,10 @@ dependencies:
   dio: ^5.4.1
   
   # Local storage
-  shared_preferences: ^2.2.2 
+  shared_preferences: ^2.2.2
+  
+  # Environment variables
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -53,6 +56,7 @@ flutter:
   uses-material-design: true
  
   assets:
+    - .env
     - assets/images/
     - assets/icons/
  
@@ -67,6 +71,3 @@ flutter:
           weight: 600
         - asset: assets/fonts/OpenSans-Bold.ttf
           weight: 700
-
-
- 
