feat: add markdown

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   
   # Environment variables
   flutter_dotenv: ^5.1.0
+  
+  # Markdown
+  flutter_markdown: ^0.6.20
 
 dev_dependencies:
   flutter_test:
