update environment configuration and add validation for API_KEY and BASE_URL

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,9 +15,14 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.16.x'
+          flutter-version: '3.29.2'
           channel: 'stable'
-      
+      - name: 'Create env file'
+        run: |
+          touch .env
+          echo BASE_URL=${{ secrets.BASE_URL }}" >> .env
+          echo API_KEY=${{ secrets.API_KEY }} >> .env
+          cat .env
       - name: Install dependencies
         run: flutter pub get
         
