--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,9 +20,10 @@ jobs:
       - name: 'Create env file'
         run: |
           touch .env
-          echo BASE_URL=${{ secrets.BASE_URL }}" >> .env
-          echo API_KEY=${{ secrets.API_KEY }} >> .env
+          echo "BASE_URL=${{ secrets.BASE_URL }}" >> .env
+          echo "API_KEY=${{ secrets.API_KEY }}" >> .env
           cat .env
+
       - name: Install dependencies
         run: flutter pub get
         
