--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   # Markdown
   flutter_markdown: ^0.6.20
   http: ^1.3.0
+  clipboard: ^0.1.3
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
